<resources>
    <string name="app_name">MUFIX</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Full Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_phone">Phone</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="or">OR</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="upload_personal_image">Upload Personal Image</string>
    <string name="sign_up_with_facebook">Sign Up With Facebook</string>
    <string name="sign_up_with_linkedin">Sign Up With LinkedIn</string>
    <string name="sign_up_with_google">Sign Up With Google</string>
    <string name="logout">Logout</string>
    <string name="about">All Rights Reserved to MUFIX Community</string>
    <string name="company">Company Account</string>
    <string name="personal_account">Personal Account</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="latest_applications">Latest Applications</string>
    <string name="settings">Settings</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="tab_home">Home</string>
    <string name="tab_apps">Apps</string>
    <string name="tab_chat">Chat</string>
    <string name="tab_jobs">Jobs</string>
    <string name="tab_profile">Profile</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_for_anything">Search for anything</string>
    <string name="search">search</string>
    <string name="post_owner">Post Owner</string>
    <string name="post_date">Post Date</string>
    <string name="post_content">Post Content</string>
    <string name="_1">1</string>
    <string name="some_user">Some User</string>
    <string name="app_owner">App Owner</string>
</resources>
