<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.root.mufixapplication.Activities.LoginActivity"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/padding"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/sign_in_email"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/sign_in_password"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:id="@+id/login_progressbar"/>

    <android.support.v7.widget.AppCompatButton
        android:onClick="onSignIn"
        android:textColor="@color/white"
        android:background="@drawable/button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding"
        android:layout_marginRight="@dimen/padding"
        android:text="@string/action_sign_in_short"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onSignUp"
        android:text="@string/no_account_yet_create_one"
        android:gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textSize="17sp"
        android:textColor="@color/white"/>
    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:textSize="13sp"
        android:textColor="@color/white"/>
</LinearLayout>
