<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/poster"
    android:background="@color/white_trans"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/profile" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:textColor="@color/prime"
            android:ems="10"
            android:text="@string/post_owner"
            android:id="@+id/post_owner" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="@dimen/seven_dp"
        android:textSize="13sp"
        android:textColor="@color/prime"
        android:ems="10"
        android:text="@string/post_date"
        android:id="@+id/post_date"
        android:layout_marginStart="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:textSize="17sp"
        android:textColor="@color/prime"
        android:text="@string/post_content"
        android:ems="10"
        android:id="@+id/post_data" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/green"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageButton
                    android:src="@drawable/dislike"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/like_post"
                    android:background="#00000044"/>
            </LinearLayout>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/prime"
                android:text="@string/_1"
                android:id="@+id/likers"/>
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/green"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageButton
                    android:layout_width="wrap_content"
                    android:src="@drawable/comment"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:id="@+id/comment_post"
                    android:background="#00000044"/>
            </LinearLayout>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/prime"
                android:text="@string/_1"
                android:id="@+id/commentators"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/green"/>

</LinearLayout>